src/Pages/Overview/Overview.scss
@import '../../App/Variables.scss';

#overview {
    overflow: hidden;

    #overviewWelcome {
        position: relative;
        height: 100vh;
        width: 100%;
        max-height: -webkit-fill-available;
        max-width: 100%;
        overflow: hidden;

        .gallery .galleryBullets {
            opacity: 1;
            transform: translateY(0%);
            transition:
                opacity 1s ease,
                transform 1s ease;
        }

        .information {
            position: absolute;
            z-index: 250;
            left: 50%;
            bottom: 50px;
            transform: translate(-50%, 0%);
            opacity: 0;
            transition: opacity 1s ease;
            mix-blend-mode: difference;
            filter: invert(100%);

            @keyframes information {
                0% {
                    opacity: 0;
                    transform: translate(-50%, -25px);
                }
                100% {
                    opacity: 1;
                    transform: translate(-50%, 0px);
                }
            }
        }

        #logo {
            opacity: 0;
            transition: opacity 1s ease;
            mix-blend-mode: difference;
            filter: invert(100%);
        }

        video {
            position: absolute;
            display: block;
            height: calc(100% + 2px);
            width: calc(100% + 2px);
            object-fit: cover;
            object-position: center;
            opacity: 0;
            transition: opacity 1s ease;
        }

        &.active {
            #logo {
                opacity: 1;
            }

            .information {
                animation: information 1s ease;
                opacity: 1;
            }

            .gallery .galleryBullets {
                transform: translateY(100%);
                opacity: 0;
            }
        }
    }

    #overviewContent {
        display: flex;
        flex-direction: column;
        gap: var(--spacing-vertical-l);
        padding-top: var(--spacing-vertical-l);

        article {
            display: flex;
            flex-direction: column;
            gap: var(--spacing-vertical-m);

            .text {
                font-size: var(--font-size-text);
                padding: 0 var(--spacing-horizontal);
                text-align: justify;
                line-height: $line-height-m;
            }
        }
    }
}

